@@ -26,6 +26,7 @@ BZFlag 1.7e3
 * -lagdrop server option - Colin Bayer
 * fix team flag display - Colin Bayer
 * add rogue team and radar colors to config - Valery Fouques
+* Shots as lines on radar - Valery Fouques, Tim Riker
 
 BZFlag 1.7e2
 ------------
